--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -51,7 +51,10 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputDepartment">Date Of Joining*</label>
-          <input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.empJobDetail.JDDate">
+          <!--<input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.empJobDetail.JDDate">-->
+            <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
+            <input ng-model="empTabCtrl.empJobDetail.JDDate" type="text" class="form-control"/>           
+          </datepicker>
     </div>
   </div>
   <div class="col-sm-4">
@@ -130,7 +133,10 @@
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputDepartment">From Date</label>
-          <input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.empJobDetail.FromDate">
+          <!--<input type="text" class="form-control" placeholder="mm-dd-yyyy"  ng-model="empTabCtrl.empJobDetail.FromDate">-->
+          <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
+            <input ng-model="empTabCtrl.empJobDetail.FromDate" type="text" class="form-control"/>           
+          </datepicker>
     </div>
   </div>
   <div class="col-sm-4">
