--- a/src/app/pages/organization/employees/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employees/templates/personal/personal-view.html
@@ -200,9 +200,9 @@
         <div class="col-sm-5">
           <div class="checkbox">
             <label class="custom-checkbox">      
-      <input type="checkbox" ng-click="empTabCtrl.permanentAddress()" ng-model="empTabCtrl.CDPermanent" >   
-      <span>Permanent Address Same as Current Address</span>
-    </label>
+              <input type="checkbox" ng-click="empTabCtrl.permanentAddress()" ng-model="empTabCtrl.CDPermanent" >   
+                <span>Permanent Address Same as Current Address</span>
+              </label>
           </div>
         </div>
       </div>
@@ -270,7 +270,7 @@
       </grid-box>
     </uib-tab>
     <uib-tab heading="Nominee">
-     <grid-box page="nomineePage" box-options="boxSetting">
+      <grid-box page="nomineePage">
       </grid-box>
     </uib-tab>
     <uib-tab heading="Identity">
@@ -300,17 +300,17 @@
             .djTable {
               width: 100%;
             }
-            
+
             .djTable td,
             th {
               overflow: hidden;
             }
-            
+
             .djTable td:first,
             th:first {
               width: 30px;
             }
-            
+
             .djTable td:last-child,
             th:last-child {
               width: 30px;
