--- a/src/app/pages/organization/employees/edit/employeeEdit.html
+++ b/src/app/pages/organization/employees/edit/employeeEdit.html
@@ -1,6 +1,8 @@
 <div class="row mail-client-container transparent">
   <div class="col-md-12">
 
+        
+       
     <div ba-panel ba-panel-class="large-panel mail-panel">
       <div class="letter-layout">
         <div class="mail-navigation-container col-md-4" ng-class="{'expanded' : !editCtrl.navigationCollapsed}">
@@ -11,22 +13,32 @@
             ui-sref="organization.employees.edit.tab({name:t.name, pageId: t.id})">
             {{t.text}}
           </div>
+       </div>
+       <div class="panel panel-default">
+         <div class="panel-heading ">   
+           <span><img ng-src="{{ editCtrl.picture }}" height="50px" width="50px"></spa>
+           <label ng-bind="editCtrl.empBasicDetail.TitleName"></label>
+           <label ng-bind="editCtrl.empBasicDetail.EmpName"></label>
+           <label ng-bind="editCtrl.empBasicDetail.DeptName"></label>      
+           <label ng-bind="editCtrl.empBasicDetail.DesgName"></label>
+         </div>
         </div>
-        <div class="">
-          <div class="col-md-2">
-            <img ng-src="{{ editCtrl.picture }}">
+        
+          <!--<div class="col-md-1">
+            <img ng-src="{{ editCtrl.picture }}" height="50px" width="50px">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-3">
             Title:- <label ng-bind="editCtrl.empBasicDetail.TitleName"></label><br>
-            Name:- <label ng-bind="editCtrl.empBasicDetail.EmpName"></label><br>        
-            EmpCode:- <label ng-bind="editCtrl.empBasicDetail.EmpCode"></label><br> 
+            Name:- <label ng-bind="editCtrl.empBasicDetail.EmpName"></label><br>                  
+          </div>
+           <div class="col-md-3">          
             Department:- <label ng-bind="editCtrl.empBasicDetail.DeptName"></label><br>            
             Designation:- <label ng-bind="editCtrl.empBasicDetail.DesgName"></label>
-          </div>
-        </div>
+          </div>         -->
 
         <ui-view></ui-view>
-      </div>
+     
     </div>
   </div>
+</div>
 </div>
