--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -1,36 +1,2 @@
-<div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
-  <div class="mail-messages-control side-message-navigation-item">
-    <div class="toggle-navigation-container">
-      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
-    </div>
-    <div class="row">
-      <div class="col-md-6"><span class="bold-text">{{listCtrl.page.pageinfo.title}}</span><br/>
-      <span ng-show="(rows.length!==undefined)" class="font-bold">Total {{rows.length}} Record(s) found</span>
-      </div>
-      <div class="col-md-6 text-right">
-        <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.refreshData()"><i class="ion-refresh"></i>Refresh</button>
-        <button type="button" class="btn  btn-icon refresh-button" ui-sref="attendance.masters.add({name:listCtrl.tempName,pageId: listCtrl.pageId, action:'create'})">
-          <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>
-        <button type="button" class="btn  btn-icon refresh-button">
-          <i class="fa fa-filter" aria-hidden="true"></i></button>
-        <select ng-show="(listCtrl.page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="listCtrl.selectedUcvItem" ng-options="opt.name for opt in listCtrl.page.pageinfo.ucvlist"
-          ng-change="listCtrl.ucvOnChange(listCtrl.selectedUcvItem)">
-                    </select>
-        <!--<div class="btn-group" uib-dropdown>
-      <button type="button" class="btn more-button" uib-dropdown-toggle>
-        More <span class="caret"></span>
-      </button>
-      <ul uib-dropdown-menu>
-        <li><a href>Edit</a></li>
-        <li><a href>Delete</a></li>
-        <li><a href>Something else here</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href>Separated link</a></li>
-      </ul>
-    </div>-->
-      </div>
-    </div>
-  </div>
-  <ng-include src="listCtrl.templateUrlPath"></ng-include>
-  
-</div>
+<grid-box page="page">
+</grid-box>
