--- a/src/app/pages/attendance/masters/templates/holidaymaster/holidaymaster-add.html
+++ b/src/app/pages/attendance/masters/templates/holidaymaster/holidaymaster-add.html
@@ -40,10 +40,9 @@
                         <label for="inputPassword3" class="col-sm-4 control-label">From Date</label>
                         <div class="col-sm-8">
                          
-
-                        <input name="HDFromDate" maxlength="50" ng-model="addCtrl.entity.HDFromDate"  type="text" ng-required="true" class="form-control" 
-                                placeholder="Enter Shift Name" text-only-with-space>
-
+ <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
+      <input ng-model="addCtrl.entity.HDFromDate" type="text" class="form-control"/>          
+      </datepicker>
 
                         </div>
                     </div>
@@ -51,9 +50,15 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label        class="col-sm-4 control-label">To Date</label>
-                        <div class="col-sm-8">
-                            <input name="HDToDate" maxlength="50" ng-model="addCtrl.entity.HDToDate" type="text" ng-required="true" class="form-control" 
-                                placeholder="Enter Branch Name" text-only-with-space>
+                        <div class="col-sm-8">              
+
+ <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
+      <input ng-model="addCtrl.entity.HDToDate" type="text" class="form-control"/>              
+ </datepicker>
+
+
+
+
                         </div>
                     </div>
                 </div>
