--- a/src/app/pages/organization/employees/upload/empupload.html
+++ b/src/app/pages/organization/employees/upload/empupload.html
@@ -226,7 +226,7 @@
             </div>
 
             <div id="step5" ng-show="tabCtrl.migrate.step5">
-                 <h3 class="with-line">Import Summery</h3>
+                 <h3 class="with-line">Import Summary</h3>
                  <div class="row">
                       <div class="col-md-12">
                           total record in file  {{tabCtrl.totalRecord}}
@@ -260,13 +260,13 @@
 
             </div>
 
-            <div class="row" ng-hide="tabCtrl.migrate.step1">
+            <div class="row" ng-if="!tabCtrl.migrate.step5" ng-hide="tabCtrl.migrate.step1">
                 <div class="col-md-12">
                     <button type="button" ng-click="tabCtrl.goPrevious()" class="btn btn-default">
                         Previous
                     </button>
-                    <button type="button" ng-click="tabCtrl.gridOptions.data=[]" class="btn btn-default">
-                        Cancel
+                    <button type="button" ng-click="tabCtrl.clear()" class="btn btn-default">
+                        Clear
                     </button>
                     <button type="button" ng-click="tabCtrl.nextDataUpload()" ng-hide="tabCtrl.migrate.step3" class="btn btn-info">
                        {{(tabCtrl.migrate.step3)?"Import":"Next"}}
