--- a/src/app/pages/organization/employees/upload/empupload.html
+++ b/src/app/pages/organization/employees/upload/empupload.html
@@ -114,7 +114,11 @@
                             </thead>
                             <tbody>
                                 <tr ng-repeat="field in table.rows">
-                                    <td class="padT8 padB8 col-sm-2" style="padding-left:10px; text-align: left"><span ng-show="field.column1.required" class="font-red">*</span> <span ng-class="{'font-red':field.column1.required}">{{field.column1.text}}</span></td>
+                                    <td class="padT8 padB8 col-sm-2" style="padding-left:10px; text-align: left">
+                                        <span ng-show="field.column1.required" class="font-red">*</span>
+                                        <span 
+                                        ng-class="{'font-red': (field.column1.required && field.column1.value=='none'), 'font-green':(field.column1.required && field.column1.value!='none')}">{{field.column1.text}}</span>
+                                    </td>
                                     <td style="padding-top: 8px; padding-bottom: 8px; padding-right: 20px;">
                                         <select style="width:200px" class="form-control" name="{{field.column1.name}}" ng-model="field.column1.value">
                                         <option class="font-red" value="none"><em class="font-red font-italic">None</em></option>
@@ -122,7 +126,9 @@
 
                                          
                                         </select></td>
-                                    <td ng-show="(field.column2!==undefined)" class="col-sm-2" style="padding-top: 8px; padding-bottom: 8px"><span ng-show="field.column2.required" class="font-red">*</span> <span ng-class="{'font-red':field.column2.required}">{{field.column2.text}}</span></td>
+                                    <td ng-show="(field.column2!==undefined)" class="col-sm-2" style="padding-top: 8px; padding-bottom: 8px">
+                                        <span ng-show="field.column2.required" class="font-red">*</span> 
+                                        <span ng-class="{'font-red': (field.column2.required && field.column2.value=='none'), 'font-green':(field.column2.required && field.column2.value!='none')}">{{field.column2.text}}</span></td>
                                     <td ng-show="(field.column2!==undefined)" style="padding-top: 8px; padding-bottom: 8px">
                                         <select style="width:200px" class="form-control" name="{{field.column2.name}}" ng-model="field.column2.value">
                                             <option class="font-red" value="none"><em class="font-red font-italic">None</em></option>
@@ -226,36 +232,36 @@
             </div>
 
             <div id="step5" ng-show="tabCtrl.migrate.step5">
-                 <h3 class="with-line">Import Summary</h3>
-                 <div class="row">
-                      <div class="col-md-12">
-                          total record in file  {{tabCtrl.totalRecord}}
-                       </div>
-                 </div>
+                <h3 class="with-line">Import Summary</h3>
+                <div class="row">
+                    <div class="col-md-12">
+                        total record in file {{tabCtrl.totalRecord}}
+                    </div>
+                </div>
 
-                 <div class="row">
-                      <div class="col-md-4">
-                          <div class="col-md-4">
-                              <a href="">Added {{tabCtrl.successLength}}</a>
-                           </div>
-                           <div class="col-md-4">
-                               <a href="">Skip {{tabCtrl.skipListLength}}</a>
-                           </div>
-                          <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="col-md-4">
+                            <a href="">Added {{tabCtrl.successLength}}</a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="">Skip {{tabCtrl.skipListLength}}</a>
+                        </div>
+                        <div class="col-md-4">
                         </div>
 
-                       </div>
-                       <div class="col-md-4">
-                       </div>
-                       <div class="col-md-4">
-                       </div>
-                 </div>
+                    </div>
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-4">
+                    </div>
+                </div>
 
-                 
-                 <br>
-               
-               
-              
+
+                <br>
+
+
+
 
 
             </div>
