--- a/src/app/pages/organization/employees/templates/experience/editExperience-modal.html
+++ b/src/app/pages/organization/employees/templates/experience/editExperience-modal.html
@@ -85,7 +85,7 @@
   </div>
   <div class="modal-footer">
     <div class="text-center">
-    <button type="button" class="btn btn-primary" ng-click="addExperience()">Save</button>
+    <button type="button" class="btn btn-primary" ng-click="editExperience()">Save</button>
     <button type="button" class="btn btn-primary" ng-click="$dismiss()">Cancel</button>
   </div>
    </div> 
