--- a/src/app/pages/organization/employees/templates/experience/editExperience-modal.html
+++ b/src/app/pages/organization/employees/templates/experience/editExperience-modal.html
@@ -5,7 +5,7 @@
     <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
       <em class="ion-ios-close-empty sn-link-close"></em>
     </button>
-    <h4 class="modal-title" id="myModalLabel">Add Experience</h4>
+    <h4 class="modal-title" id="myModalLabel">Edit Experience</h4>
   </div>
   <div class="modal-body">
    
